@@ -6,29 +6,42 @@ import com.englishweb.english_web_be.repository.TopicAnswerRepository;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
-public class TopicAnswerService {
-    TopicAnswerRepository repository;
+public class TopicAnswerService extends BaseService<TopicAnswer, TopicAnswerDTO, TopicAnswerRepository>{
+    private final TopicQuestionService topicQuestionService;
 
-    public TopicAnswerService(TopicAnswerRepository repository) {
-        this.repository = repository;
+    public TopicAnswerService(TopicAnswerRepository repository, TopicQuestionService topicQuestionService) {
+        super(repository);
+        this.topicQuestionService = topicQuestionService;
     }
 
     public List<TopicAnswerDTO> findAllByQuestionId(String questionId) {
         List<TopicAnswer> list = repository.findAllByQuestion_Id(questionId);
         return list.stream()
-                .map(this::convertToDTO)  // Convert each entity to DTO
-                .collect(Collectors.toList());  // Collect as a list
+                .map(this::convertToDTO)
+                .toList();
     }
 
-    private TopicAnswerDTO convertToDTO(TopicAnswer entity) {
+    @Override
+    protected TopicAnswerDTO convertToDTO(TopicAnswer entity) {
         TopicAnswerDTO dto = new TopicAnswerDTO();
         dto.setId(entity.getId());
         dto.setContent(entity.getContent());
         dto.setCorrect(entity.isCorrect());
         dto.setStatus(entity.getStatus());
+        dto.setTopicQuestionId(entity.getQuestion().getId());
         return dto;
+    }
+
+    @Override
+    protected TopicAnswer convertToEntity(TopicAnswerDTO dto) {
+        TopicAnswer entity = new TopicAnswer();
+        entity.setId(dto.getId());
+        entity.setContent(dto.getContent());
+        entity.setCorrect(dto.isCorrect());
+        entity.setStatus(dto.getStatus());
+        entity.setQuestion(topicQuestionService.convertToEntity(topicQuestionService.findById(dto.getTopicQuestionId())));
+        return entity;
     }
 }
